--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,18 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <div class="Header">
+      <h2>Sho Yoshimura</h2>
+      <nav>
+        <p>Home</p>
+        <p>About</p>
+        <p>Projects</p>
+        <p>Skills</p>
+        <p>Work Experience</p>
+        <p>ContactMe</p>  
+      </nav>
+    </div>
+  
+  </body>
 </html>
