--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,21 @@
         <p>ContactMe</p>  
       </nav>
     </div>
+
+    <div class="About">
+      <h1 class="name">Sho Yoshimura</h1>
+      <h2 class="tytle">Tytle</h2>
+      <p class="information">woaifncladjrlskfosdjrhiajlamkdnciuhwj;laskfndhoejwklmkaenifahijsdljfiaurehfalmcknkjehturaejofj;dscrtuinmgualsdjrieacidjarijeaiojaijidjljsdijfijafajsiejraijjfaoseuhcduhciauehifjiaseruyaehfjsdlfijasidhuahefjasidjfiauehraeijfaisdhfaehirasijfaisudhahefjsiuehasehfhashjiahsiueasejsdifhasudhifaiwehuhauedofjalselizriusehahsufhzsdhfaijsdfzjsej;ohkdrtuihdrftuih.kfsnlrejsjfodifjierjitwriejjfksjisjefij</p>
+      <div class="icons">
+        <p class="iconName" id="EmailLINK">Email</p>
+        <p class="iconName" id="InstagramLINK">Instagram</p>
+        <p class="iconName" id="LinkedInLINK">LinkedIn</p>
+        <img class="Logo" id="EmailLogo" src="images/Email.png" alt="Email">
+        <img class="Logo" id="InstagramLogo" src="images/instagramLogo.png" alt="Instagram">
+        <img class="Logo" id="LinkedInLogo" src="images/LinkedIn.png" alt="LinkedIn">
+      </div>
+      <img class="Mypicture" src="images/P4260105.JPG" alt="MyPicture">
+    </div>
   
   </body>
 </html>
