--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,10 @@
 
     <div class="About">
       <h1 class="name">Sho Yoshimura</h1>
-      <h2 class="tytle">Tytle</h2>
-      <p class="information">woaifncladjrlskfosdjrhiajlamkdnciuhwj;laskfndhoejwklmkaenifahijsdljfiaurehfalmcknkjehturaejofj;dscrtuinmgualsdjrieacidjarijeaiojaijidjljsdijfijafajsiejraijjfaoseuhcduhciauehifjiaseruyaehfjsdlfijasidhuahefjasidjfiauehraeijfaisdhfaehirasijfaisudhahefjsiuehasehfhashjiahsiueasejsdifhasudhifaiwehuhauedofjalselizriusehahsufhzsdhfaijsdfzjsej;ohkdrtuihdrftuih.kfsnlrejsjfodifjierjitwriejjfksjisjefij</p>
+      <div class="tytle">
+        <h2 class="tytle">Tytle</h2>
+        <p class="information">woaifncladjrlskfosdjrhiajlamkdnciuhwj;laskfndhoejwklmkaenifahijsdljfiaurehfalmcknkjehturaejofj;dscrtuinmgualsdjrieacidjarijeaiojaijidjljsdijfijafajsiejraijjfaoseuhcduhciauehifjiaseruyaehfjsdlfijasidhuahefjasidjfiauehraeijfaisdhfaehirasijfaisudhahefjsiuehasehfhashjiahsiueasejsdifhasudhifaiwehuhauedofjalselizriusehahsufhzsdhfaijsdfzjsej;ohkdrtuihdrftuih.kfsnlrejsjfodifjierjitwriejjfksjisjefij</p>
+    </div>
       <div class="icons">
         <p class="iconName" id="EmailLINK">Email</p>
         <p class="iconName" id="InstagramLINK">Instagram</p>
