--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,6 @@
     <div class="Header">
       <h2>Sho Yoshimura</h2>
       <nav>
-        <p>Home</p>
-        <p>About</p>
         <p>Projects</p>
         <p>Skills</p>
         <p>Work Experience</p>
@@ -22,8 +20,14 @@
     <div class="About">
       <h1 class="name">Sho Yoshimura</h1>
       <div class="tytle">
-        <h2 class="tytle">Tytle</h2>
-        <p class="information">woaifncladjrlskfosdjrhiajlamkdnciuhwj;laskfndhoejwklmkaenifahijsdljfiaurehfalmcknkjehturaejofj;dscrtuinmgualsdjrieacidjarijeaiojaijidjljsdijfijafajsiejraijjfaoseuhcduhciauehifjiaseruyaehfjsdlfijasidhuahefjasidjfiauehraeijfaisdhfaehirasijfaisudhahefjsiuehasehfhashjiahsiueasejsdifhasudhifaiwehuhauedofjalselizriusehahsufhzsdhfaijsdfzjsej;ohkdrtuihdrftuih.kfsnlrejsjfodifjierjitwriejjfksjisjefij</p>
+        <h2 class="tytle">I'm an Electric Engineer → Web Developer</h2>
+        <p class="information"> I have diploma of Electric Information Technology, and I was working in semiconductor industry. I'm good at suggesting efficiency and removing waste of process. I worked with Chinese, Taiwanese, and American people in Chinese and English. I was getting along with them and worked together. <span>I'm learning HTML/CSS, JS to become a Web Developer that can provide Efficient systems.</span>
+        </p>
+        <h2 class="tytle">I'm an active person
+        </h2>
+        <p class="information"> I really like Nature, which is Mountain, river, sea,,, and sports which is Soccer, Handball, Tennis, Bouldering, Judo and so on. I have scuba diving license and Judo Black belt. I'm going to do Judo in Canada in the future. Honestly, I'm not good at doing sports, but I really love and enjoy nature and sports. <span>Let's enjoy together!!</span>
+        </p>
+
     </div>
       <div class="icons">
         <p class="iconName" id="EmailLINK">Email</p>
@@ -33,7 +37,7 @@
         <img class="Logo" id="InstagramLogo" src="images/instagramLogo.png" alt="Instagram">
         <img class="Logo" id="LinkedInLogo" src="images/LinkedIn.png" alt="LinkedIn">
       </div>
-      <img class="Mypicture" src="images/P4260105.JPG" alt="MyPicture">
+      <img class="Mypicture" src="images/Teaching.jpg" alt="MyPicture">
     </div>
   
   </body>
