--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,32 @@
       </div>
       <img class="Mypicture" src="images/Teaching.jpg" alt="MyPicture">
     </div>
-  
+
+    <div class="Skills">
+      <div class="title">
+        <h1>Skills</h1>
+      </div>
+      <div class="SkillGrid">
+        <div class="Outline">
+          <h2 class="SkillName">Efficiency</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <p>I'm good at thinking and providing the great way to remove waste of process, factory lines. I can achieve the goal throw the PDCA cycle.
+          </p>
+        </div>  
+        <div class="Outline">
+          <h2 class="SkillName">HTML</h2>
+          <img class="image" src="images/HTML.png" alt="HTML">
+          <p>I can create and fix web site. For example, I cleated this home page. I can provide the ideal web site.
+          </p>
+        </div>  
+        <div class="Outline hide">
+          <h2 class="SkillName">CSS</h2>
+          <img class="image" src="images/CSS.png" alt="CSS">
+          <p>I can make codes with JS and I'm learning JS as a student. I'm going to collaborate with my efficiency skill, then I'd provide great systems.
+          </p>
+        </div>  
+      </div>
+      <p class="ShowMore">show more</p>
+    </div>    
   </body>
 </html>
