--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,39 @@
       <img class="Mypicture" src="images/Teaching.jpg" alt="MyPicture">
     </div>
 
+    <div class="Project">
+      <div class="title">
+        <h1>Projects</h1>
+      </div>  
+      <div class="ProjectGrid">
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+        <div class="POutline">
+          <h2 class="ProjectName">Project1</h2>
+          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+        </div>
+      </div>
+      <p class="ShowMore">show more</p>
+    </div>
+
     <div class="Skills">
       <div class="title">
         <h1>Skills</h1>
