--- a/src/index.html
+++ b/src/index.html
@@ -102,5 +102,30 @@
       </div>
       <p class="ShowMore">show more</p>
     </div>    
+
+    <div class="WorkExperience">
+      <div class="title">
+        <h1>Work Experience</h1>
+      </div>
+      <div class="WorkGrid">
+        <div class="Outline">
+          <h2 class="CompanyInd">Semiconductor</h2>
+          <img src="images/semiconductor.png" alt="Semiconductor industry" class="image">
+          <p>I worked a Japanese semiconductor company for 13 years as an Engineer. I had experiences of Production, Efficient and Service Engineering.
+          </p>
+        </div>  
+        <div class="Outline">
+          <h2 class="CompayInd">Satellite System
+          </h2>
+          <img class="image" src="images/satelite communication.png" alt="SateliteCommunicationIndustry">
+          <p class="PC">I'm working the company which creating Satellite Communication products in Canada. I usually do testing of products and trouble shooting. I'm gaining experience working in Canada.
+          </p>
+          <p class="Phone">I'm working the company which creating Satellite Communication products in Canada. I'm gaining experience working in Canada.
+          </p>
+        </div>  
+      </div>
+      <p class="ShowMore">show more</p>
+    </div>    
+
   </body>
 </html>
