--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,27 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="Header">
-      <h2>Sho Yoshimura</h2>
+    <a href="#About" class="TopLink" id="Phone"><h2>Sho Yoshimura</h2></a>
+    <div class="Header" id="Phone">
       <nav>
-        <p>Projects</p>
-        <p>Skills</p>
-        <p>Work Experience</p>
+        <a href="#Project"><p>Projects</p></a>
+        <a href="#Skill"><p>Skills</p></a>
+        <a href="#Work"><p>Work Experience</p></a>
         <p>ContactMe</p>  
       </nav>
     </div>
 
-    <div class="About">
+    <div class="Header" id="PC">
+      <a href="#About" class="TopLink"><h2>Sho Yoshimura</h2></a>
+      <nav>
+        <a href="#Project"><p>Projects</p></a>
+        <a href="#Skill"><p>Skills</p></a>
+        <a href="#Work"><p>Work Experience</p></a>
+        <p>ContactMe</p>  
+      </nav>
+    </div>
+
+    <div class="About" id="About">
       <h1 class="name">Sho Yoshimura</h1>
       <div class="tytle">
         <h2 class="Intro">I'm an Electric Engineer → Web Developer</h2>
@@ -43,7 +53,7 @@
       <img class="Mypicture" src="images/Teaching.jpg" alt="MyPicture">
     </div>
 
-    <div class="Project">
+    <div class="Project" id="Project">
       <div class="title">
         <h1>Projects</h1>
       </div>  
@@ -76,7 +86,7 @@
       <p class="ShowMore">show more</p>
     </div>
 
-    <div class="Skills">
+    <div class="Skills" id="Skill">
       <div class="title">
         <h1>Skills</h1>
       </div>
@@ -103,7 +113,7 @@
       <p class="ShowMore">show more</p>
     </div>    
 
-    <div class="WorkExperience">
+    <div class="WorkExperience" id="Work">
       <div class="title">
         <h1>Work Experience</h1>
       </div>
