--- a/src/index.html
+++ b/src/index.html
@@ -145,24 +145,24 @@
       <div class="ContactGrid">
         <div class="AccountArea">
           <div class="Account">
-            <p><img src="images/instagramLogo.png" alt="Instagram">　　Instagram</p>
-            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">　　</p>
+            <p><img src="images/instagramLogo.png" alt="Instagram">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;InstaGram</p>
+            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/LinkedIn.png" alt="LinkedInLogo">　　LinkedIn</p>
-            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">　　</p>
+            <p><img src="images/LinkedIn.png" alt="LinkedInLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LinkedIn</p>
+            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/github.png" alt="githubLogo">　　Github</p>
-            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">　　</p>
+            <p><img src="images/github.png" alt="githubLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Github</p>
+            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/Email.png" alt="EmailLogo">　　Email</p>
-            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">　　</p>
+            <p><img src="images/Email.png" alt="EmailLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</p>
+            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/location.jpg" alt="locationLogo">　　Location</p>
-            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">　　</p>
+            <p><img src="images/location.jpg" alt="locationLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Location</p>
+            <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
         </div>
         <div class="SendMessage">
