--- a/src/index.html
+++ b/src/index.html
@@ -29,17 +29,18 @@
     </div>
 
     <div class="About" id="About">
+
       <h1 class="name">Sho Yoshimura</h1>
       <div class="tytle">
         <h2 class="Intro">I'm an Electric Engineer → Web Developer</h2>
-        <p class="information PC"> I have diploma of Electric Information Technology, and I was working in semiconductor industry. I'm good at suggesting efficiency and removing waste of process. I worked with Chinese, Taiwanese, and American people in Chinese and English. I was getting along with them and worked together. I'm learning HTML/CSS, JS to become a Web Developer that can provide Efficient systems.
+        <p class="information PC"> I have diploma of Electric Information Technology, and I was working in semiconductor industry. I'm good at <strong>suggesting efficiency</strong> and removing waste of process. I worked with Chinese, Taiwanese, and American people in Chinese and English. I was getting along with them and worked together. I'm learning <strong>HTML/CSS</strong>, <strong>JS</strong> to become a Web Developer that can provide Efficient systems.
         </p>
-        <p class="information Phone">I have diploma of Electric Information Technology, and I was working in semiconductor industry. And I'm learning programing to become a Web Developer.</p>
+        <p class="information Phone">I was working in semiconductor industry. I'm good at <strong>providing Efficiency</strong>, and I'm learning <strong>HTML/CSS and JS</strong> to become a Web Developer.</p>
         <h2 class="Intro">I'm an active person
         </h2>
-        <p class="information PC"> I really like Nature, which is Mountain, river, sea,,, and sports which is Soccer, Handball, Tennis, Bouldering, Judo and so on. I have scuba diving license and Judo Black belt. I'm going to do Judo in Canada in the future. Honestly, I'm not good at doing sports, but I really love and enjoy nature and sports. Let's enjoy together!!
+        <p class="information PC"> I really like Nature, which is Mountain, river, sea,,, and sports which is Soccer, Handball, Tennis, Bouldering, Judo and so on. I have scuba diving license and Judo Black belt. I'm going to do Judo in Canada in the future. Honestly, I'm not good at doing sports, but I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
         </p>
-        <p class="information Phone">I really like Nature and sports. And I have scuba diving license and Judo Black belt. I really love and enjoy nature and sports. Let's enjoy together!!
+        <p class="information Phone">I really like Nature and sports. And I have scuba diving license and Judo Black belt. I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
         </p>
 
     </div>
@@ -145,7 +146,7 @@
       <div class="ContactGrid">
         <div class="AccountArea">
           <div class="Account">
-            <p><img src="images/instagramLogo.png" alt="Instagram">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;InstaGram</p>
+            <p><img src="images/instagramLogo.png" alt="Instagram">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instagram</p>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
@@ -170,7 +171,16 @@
           <p>Comming Soon...</p>
         </div>
       </div>
+    </div>
 
+    <div class="Footer">
+      <div class="title">
+        <h1>Sho Yoshimura</h1>
+      </div>
+      <div class="copyRight">
+        <p>©Copyright - All Right Reserved By Sho Yoshimura
+        </p>
+      </div>
     </div>
 
   </body>
