--- a/src/index.html
+++ b/src/index.html
@@ -35,23 +35,21 @@
         <h2 class="Intro">I'm an Electric Engineer → Web Developer</h2>
         <p class="information PC"> I have diploma of Electric Information Technology, and I was working in semiconductor industry. I'm good at <strong>suggesting efficiency</strong> and removing waste of process. I worked with Chinese, Taiwanese, and American people in Chinese and English. I was getting along with them and worked together. I'm learning <strong>HTML/CSS</strong>, <strong>JS</strong> to become a Web Developer that can provide Efficient systems.
         </p>
-        <p class="information Phone">I was working in semiconductor industry. I'm good at <strong>providing Efficiency</strong>, and I'm learning <strong>HTML/CSS and JS</strong> to become a Web Developer.</p>
+        <p class="information Phone"> I'm good at <strong>providing Efficiency</strong>, and I'm learning <strong>HTML/CSS and JS</strong> to become a Web Developer.</p>
         <h2 class="Intro">I'm an active person
         </h2>
         <p class="information PC"> I really like Nature, which is Mountain, river, sea,,, and sports which is Soccer, Handball, Tennis, Bouldering, Judo and so on. I have scuba diving license and Judo Black belt. I'm going to do Judo in Canada in the future. Honestly, I'm not good at doing sports, but I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
         </p>
-        <p class="information Phone">I really like Nature and sports. And I have scuba diving license and Judo Black belt. I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
+        <p class="information Phone">I love Nature and sports. And I have scuba diving license and Judo Black belt. I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
         </p>
 
     </div>
       <div class="icons">
-        <p class="iconName" id="EmailLINK">Email</p>
-        <p class="iconName" id="InstagramLINK">Instagram</p>
-        <p class="iconName" id="LinkedInLINK">LinkedIn</p>
-        <img class="Logo" id="EmailLogo" src="images/Email.png" alt="Email">
-        <img class="Logo" id="InstagramLogo" src="images/instagramLogo.png" alt="Instagram">
-        <img class="Logo" id="LinkedInLogo" src="images/LinkedIn.png" alt="LinkedIn">
-      </div>
+        <a href="mailto:yoshikichi8000@gmail.com"><p class="iconName" id="EmailLINK">Email        <img class="Logo" id="EmailLogo" src="images/Email.png" alt="Email">
+        </p></a>
+        <a href="https://www.instagram.com/yoshi_kun_8000?igsh=MWMxOXhiaW1kdzZjdQ=="><p class="iconName" id="InstagramLINK">Instagram<img class="Logo" id="InstagramLogo" src="images/instagramLogo.png" alt="Instagram"></p></a>
+        <a href="https://www.linkedin.com/in/sho-yoshimura-885001261/"><p class="iconName" id="LinkedInLINK">LinkedIn<img class="Logo" id="LinkedInLogo" src="images/LinkedIn.png" alt="LinkedIn"></p></a>
+        </div>
       <img class="Mypicture" src="images/Teaching.jpg" alt="MyPicture">
     </div>
 
