--- a/src/index.html
+++ b/src/index.html
@@ -144,23 +144,23 @@
       <div class="ContactGrid">
         <div class="AccountArea">
           <div class="Account">
-            <p><img src="images/instagramLogo.png" alt="Instagram">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instagram</p>
+            <a href="https://www.instagram.com/yoshi_kun_8000?igsh=MWMxOXhiaW1kdzZjdQ=="><p><img src="images/instagramLogo.png" alt="Instagram">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instagram</p></a>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/LinkedIn.png" alt="LinkedInLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LinkedIn</p>
+            <a href="https://www.linkedin.com/in/sho-yoshimura-885001261/"><p><img src="images/LinkedIn.png" alt="LinkedInLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LinkedIn</p></a>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/github.png" alt="githubLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Github</p>
+            <a href="https://github.com/Sho8000"><p><img src="images/github.png" alt="githubLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Github</p></a>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/Email.png" alt="EmailLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</p>
+            <a href="mailto:yoshikichi8000@gmail.com"><p><img src="images/Email.png" alt="EmailLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email</p></a>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
           <div class="Account">
-            <p><img src="images/location.jpg" alt="locationLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Location</p>
+            <a href="https://maps.app.goo.gl/THFQHSRc269Me66QA"><p><img src="images/location.jpg" alt="locationLogo">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Location</p></a>
             <p><img src="images/Link.png" alt="LinkLogo" class="LinkLogo">&nbsp;&nbsp;&nbsp;&nbsp;</p>
           </div>
         </div>
