--- a/src/index.html
+++ b/src/index.html
@@ -61,28 +61,28 @@
       </div>  
       <div class="ProjectGrid">
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Project1</h2>
-          <img src="images/Efficiency.png" alt="Efficiency" class="image">
+          <h2 class="ProjectName">Comming Soon...</h2>
+          <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
       </div>
       <p class="ShowMore">show more</p>
