--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,11 @@
         <p class="information PC"> I have diploma of Electric Information Technology, and I was working in semiconductor industry. I'm good at <strong>suggesting efficiency</strong> and removing waste of process. I worked with Chinese, Taiwanese, and American people in Chinese and English. I was getting along with them and worked together. I'm learning <strong>HTML/CSS</strong>, <strong>JS</strong> to become a Web Developer that can provide Efficient systems.
         </p>
         <p class="information Phone">I was working in semiconductor industry. I'm good at <strong>providing Efficiency</strong>, and I'm learning <strong>HTML/CSS and JS</strong> to become a Web Developer.</p>
-        <h2 class="Intro">I'm an active person
+      
+        <a href="hobby.html">
+          <h2 class="Intro">I'm an active person
         </h2>
+      </a>
         <p class="information PC"> I really like Nature, which is Mountain, river, sea,,, and sports which is Soccer, Handball, Tennis, Bouldering, Judo and so on. I have scuba diving license and Judo Black belt. I'm going to do Judo in Canada in the future. Honestly, I'm not good at doing sports, but I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
         </p>
         <p class="information Phone">I really like Nature and sports. And I have scuba diving license and Judo Black belt. I really love and enjoy nature and sports. <strong>Let's enjoy together!!</strong>
@@ -61,27 +64,27 @@
       </div>  
       <div class="ProjectGrid">
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Comming</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Soon</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Comming</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Soon</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Comming</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
         <div class="POutline">
-          <h2 class="ProjectName">Comming Soon...</h2>
+          <h2 class="ProjectName">Soon</h2>
           <img src="images/commingSoon.png" alt="Efficiency" class="image">
         </div>
       </div>
